# zhipuai-sdk-python-v4

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  Release-Note.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/actions/poetry_setup/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: _integration_test.yml  _release.yml  _test.yml  _test_release.yml  lint-pr.yaml  publish-to-test-pypi.yml  test.yml
examples/: async_chat_completions.py  chat_completions.py  embedding.py  funccall.py  function_call.py  function_call_2.py  image_generations.py  image_input.py  v4api.py  v4api_async.py  v4api_result.py
test/core/: test_files.py  test_http_client.py  test_request_opt.py  test_response.py  test_streaming.py
tests/: conftest.py  test_charglm3.py  test_chat.py  test_embedding.py  test_file.py  test_finetuning.py  test_images.py
tests/agent/: glm3_agent.py  test_agent.py  test_create_structured_funcation_call.py  test_prompt_parser_agent.py
tests/integration_tests/: batchinput.jsonl  batchinput_sha.jsonl  batchoutput.jsonl  demo.jsonl  file.xlsx  test.py  test_agents.py  test_assistant.py  test_audio.py  test_batches.py  test_charglm3.py  test_chat.py  test_code_geex.py  test_embedding.py  test_emohaa.py  test_file.py  test_file_parser.py  test_finetuning.py  test_images.py  test_knowledge.py  test_mcp.py  test_moderation.py  test_tools.py  test_transcriptions.py  test_tts.py  test_videos.py  test_vlm_thinking.py  test_web_search.py
tests/unit_tests/: batchinput.jsonl  test_agents.py  test_audio.py  test_charglm3.py  test_finetuning.py  test_http_client.py  test_http_client_file.py  test_jwt.py  test_request_opt.py  test_response.py  test_sdk_import.py  test_streaming.py
tests/unit_tests/maybe/: test_maybe_transform.py
tests/unit_tests/response_model/: test_response.py
tests/unit_tests/sse_client/: test_stream.py
zhipuai/: __init__.py  __version__.py  _base_models.py  _client.py
zhipuai/api_resource/: __init__.py  batches.py  embeddings.py  files.py  images.py
zhipuai/api_resource/agents/: __init__.py  agents.py
zhipuai/api_resource/assistant/: assistant.py
zhipuai/api_resource/audio/: __init__.py  audio.py  transcriptions.py
zhipuai/api_resource/chat/: async_completions.py  chat.py  completions.py
zhipuai/api_resource/file_parser/: __init__.py  file_parser.py
zhipuai/api_resource/fine_tuning/: fine_tuning.py  (+1 more)
zhipuai/core/: __init__.py  _base_models.py  _base_type.py  _data_convert.py  _errors.py  _exceptions.py  _files.py  _http_client.py  _legacy_response.py  _legacy_xlsx_response.py  _request_opt.py  _response.py  _sse_client.py  _utils.py
zhipuai/types/: batch_create_params.py  embeddings.py  file_object.py  image.py
(+56 files in other folders)
